--- a/Api/appsettings.json
+++ b/Api/appsettings.json
@@ -5,5 +5,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "PokemonEnglishServiceConfigurations": {
+    "ApiKey": "",
+    "ServiceUrl": ""
+  },
+  "PokemonJapaneseServiceConfigurations": {
+    "ServiceUrl": ""
+  }
 }
